refactor: change math backend to KerbalMath

--- a/Project.toml
+++ b/Project.toml
@@ -6,8 +6,8 @@ version = "0.1.0"
 [deps]
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Geophysics = "74efdf00-b554-44e1-bd21-abb9281d951c"
+KerbalMath = "e39bb9fd-e306-4757-9c66-d4f573953a0c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 PhysicalConstants = "5ad8b20f-a522-5ce9-bfc9-ddf1d5bda6ab"
-Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
