--- a/Project.toml
+++ b/Project.toml
@@ -6,8 +6,13 @@ version = "0.1.0"
 [deps]
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Geophysics = "74efdf00-b554-44e1-bd21-abb9281d951c"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 KerbalMath = "e39bb9fd-e306-4757-9c66-d4f573953a0c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 PhysicalConstants = "5ad8b20f-a522-5ce9-bfc9-ddf1d5bda6ab"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
